create html structure and add some basic content

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="about-text">
                 <h3>me:</h3>
-                <p class="about-me-text">My name is <span class="alix-faudot">Alix Faudot</span> and I'm a front end developer. I have a background in XXX and everything I touch is <span class="colourful">colourful</span>. CSS is my jam, I love the challenges of Javascript, and I get so much joy out of making websites that are cute, functional, and accessible to <span class="everyone">everyone</span>. I am exhilarated by the challenges and rewards that come with coding and how there are always new things to learn and problems to solve. All of the pieces in my portfolio were designed and built by me. I hope you like them as much as I do!</p>
+                <p class="about-me-text">My name is <span class="alix-faudot">Alix Faudot</span> and I'm a front end developer.</p>
             </div>
         </section>
 
@@ -144,7 +144,7 @@
                     </div>
                     <div class="project-description">
                         <h4>Project 3</h4>
-                        <p>XXX! This app was my first time creating something with React. It was also my first time storing and accessing data in a database. It was a lot to learn at once but I loved the challenge and am so proud of what I created.</p>
+                        <p>This app was my first time creating something with React.</p>
                     </div>
                 </div>
                 <div class="project project-4">
@@ -165,7 +165,7 @@
                     </div>
                     <div class="project-description">
                         <h4>Project 4</h4>
-                        <p>An app created with React and an API. This was a group project made by A, B, C, and myself. Working on a team of people makes problem solving a lot easier, and it's so cool to see a group of individuals contributing to the creation of something in their own unique way.</p>
+                        <p>An app created with React and an API. This was a group project made by A, B, C, and myself.</p>
                     </div>
                 </div>
             </div>
