font face for heading custom font

--- a/index.html
+++ b/index.html
@@ -79,14 +79,7 @@
     <main>
 
         <!-- ABOUT section -->
-        <section class="about" id="about"     data-aos="fade-up"
-    data-aos-offset="200"
-    data-aos-delay="50"
-    data-aos-duration="1000"
-    data-aos-easing="ease-in-out"
-    data-aos-mirror="true"
-    data-aos-once="false"
-    data-aos-anchor-placement="top-center">
+        <section class="about" id="about">
             <div class="wrapper about-section">
             <div class="about-container">
                 <h2 class="about-title">Alix Faudot</h2>
