work on media queries

--- a/index.html
+++ b/index.html
@@ -88,11 +88,13 @@
             <div class="wrapper about-section">
             <div class="about-container">
                 <h2 class="about-title">About me</h2>
-                <p class="about-text">I am a French native and been living in Toronto, Ontario, Canada for the past 8 years. I love the outdoors (camping, hiking, biking, snowshoeing, you name it!).</p>
-                <p>Web development is a great combination of who I am: integrating the technical, problem-solving side of me in the software implementation, while still channelling my creative self in making every web application I create, pixel-perfect.</p>
-                <p>I have a habit of fully investing in any project or goal in front of me.</p>
-                    <nav class="social-nav">
-                        <ul class="about-links">
+                <div class="about-text">
+                    <p >I am a French native and been living in Toronto, Ontario, Canada for the past 8 years. I love the outdoors (camping, hiking, biking, snowshoeing, you name it!).</p>
+                    <p>Web development is a great combination of who I am: integrating the technical, problem-solving side of me in the software implementation, while still channelling my creative self in making every web application I create, pixel-perfect.</p>
+                    <p>I have a habit of fully investing in any project or goal in front of me.</p>
+                </div>
+                    <nav class="social-nav about-links">
+                        <ul>
                             <li>
                                 <a href=""><i class="fa-brands fa-github"></i></a>
                             <li>
@@ -101,10 +103,8 @@
                             <li>
                                 <a href=""><i class="fa-brands fa-twitter"></i></a>
                             </li>
-                            <li>
-                                <a href="" download=""><button class="button borderless">Download Resume</button></a>
-                            </li>
                         </ul>
+                        <a href="" download=""><button class="button borderless">Download Resume</button></a>
                     </nav>
             </div>
 
